<resources>
    <string name="app_name">BudgetManager</string>
    <string name="balance">$1000.00</string>
    <string name="montly">Montly</string>
    <string name="quarterly">Quarterly</string>
    <string name="biannual">Biannual</string>
    <string name="custom_period">Custom period</string>
    <string name="new_account">New account +</string>
    <string name="register">Register</string>
    <string name="account_balance">Account balance:</string>
    <string name="reports">Reports</string>
    <string name="deposit">Deposit</string>
    <string name="transfer">Transfer</string>
    <string name="schedule_paids">Schedule paids</string>
    <string name="categories">Categories</string>
    <string name="switch_account">Switch account</string>
    <string name="logout">Logout</string>
    <string name="new_account_name_field">New account name</string>
    <string name="new_category_name">New category name</string>
    <string name="account">Account :</string>
    <string name="make_transaction">Make transaction</string>
    <string name="ok">OK</string>
    <string name="account_manager">Account manager</string>
</resources>