<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:orientation="vertical">

    <fragment android:name="app.budgetmanager.ui.AccountStatusMonitor"
              android:id="@+id/article_fragment"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" />

    <Button
            android:text="@string/reports"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reportBtn"
            android:padding="10dp"/>

    <Button
            android:text="@string/make_transaction"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/transaction_button"
            android:padding="10dp"
            />

    <Button
            android:text="@string/categories"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/categoriesBtn"
            android:padding="10dp"/>

    <Button
            android:text="@string/account_manager"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/account_manager_btn"
            android:padding="10dp"/>

    <Button
            android:text="@string/logout"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/logoutBtn"
            android:padding="10dp"/>

</LinearLayout>