<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical">

    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="50dp"
            >

        <TextView
                android:text="Account balance: "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textSize="24sp"
                android:layout_weight="1"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/balance"
                android:textSize="30sp"
                android:textAlignment="textEnd"/>


    </LinearLayout>

    <EditText
            android:layout_marginBottom="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/new_account_name_field"
            android:id="@+id/accountNameField"
            />

    <Spinner
            android:layout_marginBottom="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/accountTypeOptions"/>

    <Button
            android:text="@string/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registerBtn"
            />

</LinearLayout>